@@ -1,3 +1,11 @@
+2005-12-07  Murray Cumming <murrayc@murrayc.com>
+
+	* cairomm/context.cc:
+	* cairomm/context.h: Change mask_surface() to 
+	mask() and set_source_surface() to set_source(), 
+	as per the method overloading advice in the 
+	language bindings section of the cairo documentation.
+
 0.2.0:
 
 2005-12-02  Murray Cumming <murrayc@murrayc.com>
